--- a/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html
+++ b/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html
@@ -10,8 +10,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="canonical" href="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html" />
-    <link rel="alternate" href="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html" hreflang="id-ID" />
+    <link rel="canonical" href="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html" />
+    <link rel="alternate" href="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html" hreflang="id-ID" />
     <link rel="shortcut icon" type="image/x-icon" href="https://static.wixstatic.com/media/6455b2_cfcf840da7894873a70073b69521df6b~mv2.webp" />
     <link rel="apple-touch-icon" href="https://static.wixstatic.com/media/6455b2_cfcf840da7894873a70073b69521df6b~mv2.webp" />
     <link rel="icon" type="image/x-icon" href="https://static.wixstatic.com/media/6455b2_cfcf840da7894873a70073b69521df6b~mv2.webp" />
@@ -35,7 +35,7 @@
     <!-- Facebook -->
     <meta property="og:title" content="Teknik Strategi Paling Ampuh untuk Mahjong Wins 3 Tips Pola Gacor dan Trik Tersembunyi yang Tidak Diketahui Pemain" />
     <meta property="og:description" content="Kunjungi situs kami sekarang juga untuk menemukan teknik strategi efektif dalam Mahjong Wins 3 dapatkan tips pola gacor dan trik tersembunyi yang akan membantu Anda menang." />
-    <meta property="og:url" content="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html" />
+    <meta property="og:url" content="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html" />
     <meta property="og:image" content="https://static.wixstatic.com/media/6455b2_24f4c033366344c3af486ee889f96928~mv2.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="PERIHOKI" />
@@ -74,7 +74,7 @@
         "@type": "Organization",
         "name": "PERIHOKI",
         "alternateName": "Teknik Strategi Paling Ampuh untuk Mahjong Wins 3 Tips Pola Gacor dan Trik Tersembunyi yang Tidak Diketahui Pemain",
-        "url": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html",
+        "url": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html",
         "logo": "https://static.wixstatic.com/media/6455b2_cfcf840da7894873a70073b69521df6b~mv2.webp"
       }
     </script>
@@ -86,12 +86,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html"
+          "item": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html"
         }, {
           "@type": "ListItem",
           "position": 2,
           "name": "PERIHOKI",
-          "item": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html"
+          "item": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html"
         }]
       }
     </script>
@@ -101,7 +101,7 @@
         "@type": "NewsArticle",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html"
+          "@id": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html"
         },
         "headline": "Teknik Strategi Paling Ampuh untuk Mahjong Wins 3 Tips Pola Gacor dan Trik Tersembunyi yang Tidak Diketahui Pemain",
         "description": "Kunjungi situs kami sekarang juga untuk menemukan teknik strategi efektif dalam Mahjong Wins 3 dapatkan tips pola gacor dan trik tersembunyi yang akan membantu Anda menang.",
@@ -109,7 +109,7 @@
         "author": {
           "@type": "Organization",
           "name": "PERIHOKI",
-          "url": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html"
+          "url": "https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html"
         },
         "publisher": {
           "@type": "Organization",
@@ -263,7 +263,7 @@
     </section>
 
     <section class='n-container m-b-normal'>
-      <div class='container' style='text-align: center;'><span>© 2025 <a href="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html">PERIHOKI</a>. All Rights Reserved.</span></div>
+      <div class='container' style='text-align: center;'><span>© 2025 <a href="https://patiwega.github.io/jalasuma/teknik-strategi-paling-ampuh-untuk-mahjong-wins-3-tips-pola-gacor-trik-tersembunyi.html">PERIHOKI</a>. All Rights Reserved.</span></div>
     </section>
 	<amp-analytics type="gtag" data-credentials="include">
         <script type="application/json">
