--- a/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html
+++ b/teknik-strategi-paling-ampuh-untuk-mahjong-wins 3-tips-pola-gacor-trik-tersembunyi.html
@@ -269,9 +269,9 @@
         <script type="application/json">
         {
             "vars": {
-                "gtag_id": "G-ZFNYC9CCDH",
+                "gtag_id": "G-QDS5WVMS85",
                 "config": {
-                    "G-ZFNYC9CCDH": {
+                    "G-QDS5WVMS85": {
                         "groups": "default"
                     }
                 }
